@@ -4,5 +4,59 @@
   <artifactId>cardcore</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>CardCore</name>
-  <description>Card and Deck</description>
+  <description>Card, Deck, and related classes.</description>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.9</source>
+          <target>1.9</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19</version>
+        <configuration>
+          <argLine>-Djdk.attach.allowAttachSelf</argLine>
+          <systemPropertyVariables>
+            <log4j.configurationFile>conf/log4j-console-config.xml</log4j.configurationFile>
+            <coverage-metrics>line,path</coverage-metrics>
+            <coverage-output>html</coverage-output>
+            <coverage-srcDirs>src/main/java</coverage-srcDirs>
+            <coverage-excludes>sun.jvmstat.*</coverage-excludes>
+            <!-- other properties, if needed -->
+          </systemPropertyVariables>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.0.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jmockit</groupId>
+  		<artifactId>jmockit</artifactId>
+  		<version>1.40</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.2.0</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-engine</artifactId>
+  		<version>5.2.0</version>
+  		<scope>test</scope>
+  	</dependency>
+  </dependencies>
 </project>
